# alexis

./: .gitignore  CMakeLists.txt
Libs/alexis/: CMakeLists.txt  Precompiled.h  alexis.vcxproj  alexis.vcxproj.filters  test.cpp  test.h
Libs/alexis/Core/: Application.cpp  Application.h
Libs/alexis/Sources/: Core.h  CoreApplication.cpp  CoreApplication.h  CoreHelpers.h  Core_Old.cpp  Core_Old.h  Precompiled.h  Scene.cpp  Scene.h  Win32Application.cpp  Win32Application.h
Libs/alexis/Sources/Core/: CommandManager.cpp  CommandManager.h  Core.cpp  Core.h  Events.h  FrameUpdateGraph.cpp  FrameUpdateGraph.h  HighResolutionClock.cpp  HighResolutionClock.h  KeyCodes.h  Render.cpp  Render.h  ResourceManager.cpp  ResourceManager.h  SystemsHolder.cpp  SystemsHolder.h
Libs/alexis/Sources/ECS/: CameraComponent.h  CameraSystem.cpp  CameraSystem.h  ECS.h  Hdr2SdrSystem.cpp  Hdr2SdrSystem.h  ImguiSystem.cpp  ImguiSystem.h  LightComponent.h  LightingSystem.cpp  LightingSystem.h  ModelComponent.cpp  ModelComponent.h  ModelSystem.cpp  ModelSystem.h  ShadowSystem.cpp  ShadowSystem.h  TransformComponent.h
Libs/alexis/Sources/Render/: Camera.cpp  Camera.h  CommandContext.cpp  CommandContext.h  CommandManager.cpp  CommandManager.h  FrameRenderGraph.cpp  FrameRenderGraph.h  Mesh.cpp  Mesh.h  Render.cpp  Render.h  RenderTarget.cpp  RenderTarget.h  RenderTargetManager.cpp  RenderTargetManager.h  RootSignature.cpp  RootSignature.h  Viewport.h
Libs/alexis/Sources/Utils/: RenderUtils.h  Singleton.h  unordered_map.h
Libs/alexis/Utils/: Timer.cpp  Timer.h
Source/: CMakeLists.txt  main.cpp
(+222 files in other folders)
